example/lib/src/l10n/errors/app_te.arb
{
  "@@locale": "te",
  "error": "లోపం సంభవించింది",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "అనుకోని లోపం సంభవించింది",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "బగ్ నివేదిక విజయవంతంగా పంపబడింది.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}